--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,5 @@
 body {
     /* background-color: skyblue; */
+    /* background: url(../images/topographic.jpg) no-repeat center center / cover; */
+    /* background: url(../images/topographic.jpg) no-repeat; */
 }
