--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,9 @@
         </nav>
         <div class='container my-4'>
             {% include 'partials/flash.html.twig' %}
+
+            <img src="{{ asset('images/topographic.jpg') }}" with="100px" height="100px" alt="">
+
             {% block body %}{% endblock %}
         </div>
     </body>
