--- a/templates/admin/recipe/edit.html.twig
+++ b/templates/admin/recipe/edit.html.twig
@@ -6,6 +6,9 @@
     <h1>{{ recipe.title }}</h1>
 
     <img src="{{ vich_uploader_asset(recipe, 'thumbnailFile') }}" alt="">
+    
+    <turbo-frame id="recipe_{{ recipe.id }}">
+        {{ form(form, {action: path('admin.recipe.edit', {id: recipe.id})}) }}
+    </turbo-frame>
 
-    {{ form(form) }}
 {% endblock %}
