--- a/templates/admin/recipe/index.html.twig
+++ b/templates/admin/recipe/index.html.twig
@@ -4,9 +4,11 @@
 
 {% block body %}
     <p>
-    lorem ipsum 
+        <a class="btn btn-primary btn-sm" href="{{ path('admin.recipe.create') }}">Créer une recette</a>
     </p>
-    <a class="btn btn-primary btn-sm" href="{{ path('admin.recipe.create') }}">Créer une recette</a>
+
+    <div id="flash"></div>
+
     <table class="table">
         <thead>
             <tr>
@@ -20,10 +22,12 @@
         </thead>
         <tbody>
         {% for recipe in recipes %}
-            <tr>
+            <tr id="row_recipe_{{ recipe.id }}">
                 <td>{{ recipe.id }}</td>
                 <td>
-                    <a href="{{ path('admin.recipe.edit', {id: recipe.id}) }}">{{ recipe.title }}</a>
+                    <turbo-frame id="recipe_{{ recipe.id }}">
+                        <a href="{{ path('admin.recipe.edit', {id: recipe.id}) }}">{{ recipe.title }}</a>
+                    </turbo-frame>
                 </td>
                 <td>{{recipe.category.name | default('') }}</td>
                 <td>
